# ai-grader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/results/: Grading_Report_Baker001.md  Grading_Report_Baker002.md  Grading_Report_Baker003.md
src/: config.py  main.py
src/agents/: extractor.py  grader.py
src/rag/: ingestion.py  vector_store.py
src/schemas/: models.py
src/utils/: reporter.py  vision.py
